--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,31 @@
 name: meals_app_flutter
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+fonts:
+  - family: Raleway
+    fonts:
+      - asset: assets/fonts/Raleway-Regular.ttf
+      - asset: assets/fonts/Raleway-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Raleway-Bold.ttf
+        weight: 700
+  - family: RobotoCondensed
+    fonts:
+      - asset: assets/fonts/RobotoCondensed-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/RobotoCondensed-Light.ttf
+        weight: 300
+      - asset: assets/fonts/RobotoCondensed-Italic.ttf
+      - asset: assets/fonts/RobotoCondensed-Regular.ttf
 
 dev_dependencies:
   flutter_test:
